# InformationOptimisation

./: README.md
cpp/: .gitignore  CMakeLists.txt  requirements.sh
cpp/src/: gemini2L.yaml  get_rgb_regions.cpp  information_optimisation.cpp  information_optimisation.h  main.cpp  nyu.yaml  test.yaml  visualisation.cpp
docker/: Dockerfile
python/: demo.py  information_estimation.py  information_optimisation.py  metric.py  nyu.yaml  visualise.py
python/paper_img/: nyu_vis.py
python/test/: angle_test.py  corner_test.py  flatness_test.py  limitation_test.py  set_depth.py  staircase_test.py
python/test/angle/: 10.csv  2.csv  5.csv  paper_img_graph.py
python/utils/: open3d_ransac.py  visualise.py
python/video/: combine_video.sh  main.py
src/: depth_image.py  depth_image_sam.py  depth_plane_repair.py  depth_to_normal.py  generate_video.py  information_estimation.py  metrics.py  nyu_generate_planes.py  nyu_generate_planes_rect.py  plane_ordering.py  post_processing.py  test_depth.py  test_segment.py  video.py  visualise_mask.py
src/config/: generate.py  nyu.csv
src/data_processing_scripts/: examine_data.py  extract_data.py  open_mat.py  process_original_gt.py
src/unit_test/: test_default_ransac.py
src/utils/: depth_to_coord.py  test_data.py
